--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,11 @@
 // colors
-$color1 : purple;
+$color1 : #7577bf;
+$color2 : #4d4c72;
+$color3 : #81c98f;
+$color4 : #58b6c8;
+
+$lightgrey : #f7f7f7;
+$midgrey: #cccccc;
+$darkgrey: #999a9a;
+
+$notify: #90ee90;
