--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,12 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css",
         "variables";
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,800&display=swap');
+
 body {
   background-color: #fff;
   color: #000;
+  font-family: "Open Sans";
 }
 
 header,
@@ -27,7 +30,8 @@ nav ul {
 }
 
 nav ul {
-  width: 100%;
+  // width: 100%;
+  // Setting that caused problems!
 }
 
 nav li {
@@ -37,5 +41,9 @@ nav li {
 
 .avatar {
   border-radius: 50%;
-  height: 6em;
+  height: 3em;
+}
+
+h1, h2 {
+  font-size: 1rem;
 }
