--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,17 +21,17 @@ nav {
 
 header,
 nav ul {
-  padding: 1em;
+  padding: 1rem;
   display: flex;
   flex-direction: row;
   align-content: space-around;
   justify-content: space-between;
+  align-items: center;
   margin: 0;
 }
 
 nav ul {
-  // width: 100%;
-  // Setting that caused problems!
+  padding: .5rem;
 }
 
 nav li {
@@ -47,6 +47,11 @@ nav li {
 
 h1, h2, h3 {
   font-size: 1rem;
+  font-weight: 400;
+}
+
+header h1 sup {
+  font-size: .5rem;
 }
 
 section {
@@ -55,6 +60,12 @@ section {
 
 .id-badge {
   border-left: 1px solid $darkgrey;
+  display: flex;
+  align-items: center;
+}
+
+.id-badge * {
+  margin-left: 15px;
 }
 
 section:last-child {
@@ -76,5 +87,11 @@ section h3 {
 }
 
 .navicon {
-  stroke: #fff;
+  fill: #fff;
+  height: 2rem;
+}
+
+header h2 {
+  font-weight: 400;
+  font-size: .7rem;
 }
